<resources>
    <string name="app_name">InmobiliariaConstante</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="inmueble">Inmueble</string>
    <string name="Perfil">perfil</string>
    <string name="Inicio">Inicio</string>
    <string name="Inquilinos">Inquilinos</string>
    <string name="Contratos">Contratos</string>
    <string name="Logout">Logout</string>
    <string name="Inmuebles">Inmuebles</string>
</resources>