<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mapaFragment"
            android:icon="@drawable/ic_baseline_gps_fixed_24"
            android:title="@string/Inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_user"
            android:title="@string/Perfil" />
        <item
            android:id="@+id/nav_inmueble"
            android:icon="@drawable/ic_inmueble"
            android:title="@string/inmueble" />
        <item
            android:id="@+id/nav_inquilino"
            android:icon="@drawable/ic_inquilkino"
            android:title="@string/Inquilinos" />
        <item
            android:id="@+id/nav_contrato"
            android:icon="@drawable/ic_contrato"
            android:title="@string/Contratos" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_south_west_24"
            android:title="@string/Logout" />
    </group>
</menu>